# MPC

./: .gitignore  centerline.csv  smoothed_waypoints.csv  smoothed_waypoints_fixed.csv  waypoints.csv  waypoints_new.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mpc/lib/mpc/__pycache__/: utils.calc_interpolated_ref_trajectory-64.py310.1.nbc  utils.calc_interpolated_ref_trajectory-64.py310.nbi  utils.nearest_point-33.py310.1.nbc  utils.nearest_point-33.py310.nbi
install/mpc/share/ament_index/resource_index/parent_prefix_path/: mpc
install/mpc/share/mpc/: local_setup.sh  package.sh
log/: latest_build
mpc/: CMakeLists.txt  f1tenth_racing.json
mpc/c_generated_code/: Makefile  acados_sim_solver_f1tenth_racing.c  acados_sim_solver_f1tenth_racing.h  acados_solver.pxd  acados_solver_f1tenth_racing.c  acados_solver_f1tenth_racing.h  main_f1tenth_racing.c  main_sim_f1tenth_racing.c
mpc/c_generated_code/f1tenth_racing_cost/: f1tenth_racing_cost.h  f1tenth_racing_cost_ext_cost_0_fun.c  f1tenth_racing_cost_ext_cost_0_fun_jac.c  f1tenth_racing_cost_ext_cost_0_fun_jac_hess.c  f1tenth_racing_cost_ext_cost_e_fun.c  f1tenth_racing_cost_ext_cost_e_fun_jac.c  f1tenth_racing_cost_ext_cost_e_fun_jac_hess.c  f1tenth_racing_cost_ext_cost_fun.c  f1tenth_racing_cost_ext_cost_fun_jac.c  f1tenth_racing_cost_ext_cost_fun_jac_hess.c
mpc/c_generated_code/f1tenth_racing_model/: f1tenth_racing_expl_ode_fun.c  f1tenth_racing_expl_vde_adj.c  f1tenth_racing_expl_vde_forw.c  f1tenth_racing_model.h
mpc/scripts/: generate_racing_solver.py  mpc_node.py
mpc/src/: mpc_node.cpp  racing_mpc_node.cpp
